--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -6,7 +6,10 @@
 
 
 {% block content %}
-<form>
+<form action="/edit/{{ obj_id }}" method="post">
+    Name:
+    <input type="text" name="name">
+    <br>
     <input type="text" name="key1">:
     <input type="text" name="value1">
     <br>
@@ -16,6 +19,6 @@
     <input type="text" name="key3">:
     <input type="text" name="value3">
     <br><br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="submit">
 </form>
 {% endblock %}
