--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %} - Title</title>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                crossorigin="anonymous"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <script src="{{ url_for('static', filename='script.js') }}"></script>
     </head>
