added script to prevent empty submission

--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -14,21 +14,21 @@
         <input type="text" name="name">
         <br>
         <div id="editField1">
-            <input type="text" name="key1">:
-            <input type="text" name="value1">
-            <button type="button" class="delFieldButton" id="delField1">x</button>
+            <input class="field" type="text" name="key1">:
+            <input class="field" type="text" name="value1">
+            <button class="delFieldButton" type="button" id="delField1">x</button>
             <br>
         </div>
         <div id="editField2">
-            <input type="text" name="key2">:
-            <input type="text" name="value2">
-            <button type="button" class="delFieldButton" id="delField2">x</button>
+            <input class="field" type="text" name="key2">:
+            <input class="field" type="text" name="value2">
+            <button class="delFieldButton" type="button" id="delField2">x</button>
             <br>
         </div>
         <div id="editField3">
-            <input type="text" name="key3">:
-            <input type="text" name="value3">
-            <button type="button" class="delFieldButton" id="delField3">x</button>
+            <input class="field" type="text" name="key3">:
+            <input class="field" type="text" name="value3">
+            <button class="delFieldButton" type="button" id="delField3">x</button>
             <br>
         </div>
     </div>
@@ -36,7 +36,9 @@
 
     <button type="button" id="addField">Add Field</button>
 
-    <input type="submit" value="submit">
+<!--    <button type="button" id="submitField">Submit</button>-->
+
+    <input type="submit" id="submitField" value="submit">
 
 
 
