implemented edit for existing documents

--- a/web/templates/document.html
+++ b/web/templates/document.html
@@ -6,6 +6,7 @@
 
 
 {% block content %}
+    <p><a href="{{ url_for('edit.edit', obj_id=result['id']) }}">Edit</a></p>
     <div>
         <ul>
             <li>{{ result['name'] }}</li>
