--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -9,11 +9,13 @@
 {% endblock %}
 
 
+
+
 {% block content %}
-
-
 <form action="/edit/{{ obj_id }}" method="post">
+
     <div id="editFields">
+        {% if obj_id == 'new' %}
         Name:
         <input type="text" name="name">
         <br>
@@ -35,12 +37,23 @@
             <button class="delFieldButton" type="button" id="delField3">x</button>
             <br>
         </div>
+        {% else %}
+        Name:
+        <input type="text" name="name" value="{{ result['name'] }}">
+
+        {% for key_value in result['data'] %}
+        <div id="editField{{ loop.index }}">
+            <input class="field" type="text" name="key{{ loop.index }}" value="{{ key_value[0] }}">:
+            <input class="field" type="text" name="value{{ loop.index }}" value="{{ key_value[1] }}">
+            <button class="delFieldButton" type="button" id="delField{{ loop.index }}">x</button>
+            <br>
+        </div>
+        {% endfor %}
+        {% endif %}
     </div>
     <br>
 
     <button type="button" id="addField">Add Field</button>
-
     <input type="submit" id="submitField" value="submit">
-
 </form>
 {% endblock %}
