--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -12,6 +12,10 @@
 
 
 {% block content %}
+{% if not obj_id == 'new' %}
+<p><a href="{{ url_for('edit.delete', obj_id=obj_id) }}">Delete</a></p>
+{% endif %}
+
 <form action="/edit/{{ obj_id }}" method="post">
 
     <div id="editFields">
