implemented simple search function

--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -13,7 +13,7 @@
 
 <form method="post">
     <label for="search_box">Search</label>
-    <input name="keywords" id="search_box" required>
+    <input name="keywords" id="search_box" value="{{ keywords }}" required>
     <input type="submit" id="searchSubmit" value="Search">
 </form>
 
