--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %} - IME Inventory DB</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
                 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
                 crossorigin="anonymous"></script>
@@ -16,6 +17,10 @@
         <header>
             {% block header %}{% endblock %}
         </header>
+
+        <nav>
+            <a href="{{ url_for('search.about') }}">About</a>
+        </nav>
 
         <section>
             {% block content %}
