fixed edit interface add/delete field behavior

--- a/web/templates/document.html
+++ b/web/templates/document.html
@@ -11,6 +11,8 @@
         <ul>
             <li>{{ result['name'] }}</li>
 
+            <li>Overview: {{ result['overview'] }}</li>
+
             {% if result['key_features'] %}
                 <li>
                     Key Features:
