--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -1,63 +1,88 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Edit{% endblock %}</h1>
+    <h1>{% block title %}Edit{% endblock %}</h1>
 {% endblock %}
 
 {% block script %}
-<script src="{{ url_for('static', filename='edit.js') }}"></script>
+    <script src="{{ url_for('static', filename='edit.js') }}"></script>
 {% endblock %}
 
 
 
 
 {% block content %}
-{% if not obj_id == 'new' %}
-<p><a href="{{ url_for('edit.delete', obj_id=obj_id) }}">Delete</a></p>
-{% endif %}
+    {% if not obj_id == 'new' %}
+        <p><a href="{{ url_for('edit.delete', obj_id=obj_id) }}">Delete</a></p>
+    {% endif %}
 
-<form action="/edit/{{ obj_id }}" method="post">
+    <form action="/edit/{{ obj_id }}" method="post">
 
-    <div id="editFields">
-        {% if obj_id == 'new' %}
-        Name:
-        <input type="text" name="name">
+        <div id="editFields">
+            {% if obj_id == 'new' %}
+                Name:
+                <input type="text" name="name">
+                <br>
+
+                <div id="overview">
+                    Overview:
+                    <input class="field" type="text" name="overview">
+                </div>
+                <br>
+
+                <div id="features">
+                    Key Features:
+                    <br>
+                    <div id="feature1">
+                        <input class="field" type="text" name="feature1">
+                        <button class="delFieldButton" type="button" id="delFeature1">x</button>
+                        <br>
+                    </div>
+                </div>
+                <button type="button" class="addField" id="addFeature">+</button>
+
+                <div id="applications">
+                    Key Applications:
+                    <br>
+                    <div id="application1">
+                        <input class="field" type="text" name="application1">
+                        <button class="delFieldButton" type="button" id="delApplication1">x</button>
+                        <br>
+                    </div>
+                </div>
+                <button type="button" class="addField" id="addApplication">+</button>
+
+                <div id="tags">
+                    Tags:
+                    <div class="tag1">
+                        <input class="field" type="text" name="tag1">
+                        <button class="delFieldButton" type="button" id="delTag1">x</button>
+                        <br>
+                    </div>
+                </div>
+                <button type="button" class="addField" id="addTag">+</button>
+
+                <div id="documentation">
+                    Link to Documentation:
+                    <input class="field" type="text" name="documentation"><br>
+                </div>
+
+            {% else %}
+                Name:
+                <input type="text" name="name" value="{{ result['name'] }}">
+{##}
+{#                {% for key_value in result['data'] %}#}
+{#                    <div id="editField{{ loop.index }}">#}
+{#                        <input class="field" type="text" name="key{{ loop.index }}" value="{{ key_value[0] }}">:#}
+{#                        <input class="field" type="text" name="value{{ loop.index }}" value="{{ key_value[1] }}">#}
+{#                        <button class="delFieldButton" type="button" id="delField{{ loop.index }}">x</button>#}
+{#                        <br>#}
+{#                    </div>#}
+{#                {% endfor %}#}
+            {% endif %}
+        </div>
         <br>
-        <div id="editField1">
-            <input class="field" type="text" name="key1">:
-            <input class="field" type="text" name="value1">
-            <button class="delFieldButton" type="button" id="delField1">x</button>
-            <br>
-        </div>
-        <div id="editField2">
-            <input class="field" type="text" name="key2">:
-            <input class="field" type="text" name="value2">
-            <button class="delFieldButton" type="button" id="delField2">x</button>
-            <br>
-        </div>
-        <div id="editField3">
-            <input class="field" type="text" name="key3">:
-            <input class="field" type="text" name="value3">
-            <button class="delFieldButton" type="button" id="delField3">x</button>
-            <br>
-        </div>
-        {% else %}
-        Name:
-        <input type="text" name="name" value="{{ result['name'] }}">
 
-        {% for key_value in result['data'] %}
-        <div id="editField{{ loop.index }}">
-            <input class="field" type="text" name="key{{ loop.index }}" value="{{ key_value[0] }}">:
-            <input class="field" type="text" name="value{{ loop.index }}" value="{{ key_value[1] }}">
-            <button class="delFieldButton" type="button" id="delField{{ loop.index }}">x</button>
-            <br>
-        </div>
-        {% endfor %}
-        {% endif %}
-    </div>
-    <br>
-
-    <button type="button" id="addField">Add Field</button>
-    <input type="submit" id="submitField" value="submit">
-</form>
+        <input type="submit" id="submitField" value="submit">
+    </form>
 {% endblock %}
