--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -13,12 +13,12 @@
 
     <!-- preserve selection after re-rendering template:
             type selected before re-render passed from backend -->
-    <select name="type" form="search_form">
-        <option value="all" {% if type == 'all' %}selected{% endif %} >All</option>
-        <option value="name" {% if type == 'name' %}selected{% endif %} >Name</option>
-        <option value="features" {% if type == 'features' %}selected{% endif %} >Features</option>
-        <option value="applications" {% if type == 'applications' %}selected{% endif %} >Applications</option>
-        <option value="tags" {% if type == 'tags' %}selected{% endif %} >Tags</option>
+    <select name="searchType" id="searchType" form="search_form">
+        <option value="all" {% if searchType == 'all' %}selected{% endif %} >All</option>
+        <option value="name" {% if searchType == 'name' %}selected{% endif %} >Name</option>
+        <option value="features" {% if searchType == 'features' %}selected{% endif %} >Features</option>
+        <option value="applications" {% if searchType == 'applications' %}selected{% endif %} >Applications</option>
+        <option value="tags" {% if searchType == 'tags' %}selected{% endif %} >Tags</option>
     </select>
     <form method="post" id="search_form">
         <label for="search_box">Search</label>
