added more data and added production notes

--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -26,8 +26,7 @@
         <input name="keywords" id="searchBox" value="{{ keywords }}">
         <input type="submit" id="searchSubmit" value="Search">
     </form>
-    <div id="suggestions">
-    </div>
+    <div id="suggestions"></div>
 
     <section>
         {% if results %}
