--- a/web/templates/about.html
+++ b/web/templates/about.html
@@ -1,7 +1,7 @@
 {% block content %}
 
     {% block header %}
-        <h1>{% block title %}About{% endblock %}</h1>
+        <h1 class="header-h1">{% block title %}About{% endblock %}</h1>
     {% endblock %}
 
 {% endblock %}
