--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -19,8 +19,24 @@
         </header>
 
         <nav>
-            <a href="{{ url_for('search.about') }}">About</a>
+            <ul class="nav-ul">
+                <li class="nav-li"><a class="nav-li-a" href="{{ url_for('search.about') }}">About</a></li>
+                {% if logged_in %}
+                    <li class="nav-li">
+                        <a class="nav-li-a" href="{{ url_for('search.logout') }}">Logout</a>
+                    </li>
+                    <li class="nav-li">
+                        <a class="nav-li-a" href="{{ url_for('edit.new') }}">New</a>
+                    </li>
+                {% else %}
+                    <li class="nav-li">
+                        <a class="nav-li-a" href="{{ url_for('search.login') }}">Login</a>
+                    </li>
+                {% endif %}
+
+            </ul>
         </nav>
+
 
         <section>
             {% block content %}
