--- a/web/templates/edit.html
+++ b/web/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h1>{% block title %}Edit{% endblock %}</h1>
+    <h1 class="header-h1">{% block title %}Edit{% endblock %}</h1>
 {% endblock %}
 
 {% block script %}
